# esp32-c3-oled

./: .clang-format  .gitignore  CMakeLists.txt  build_in_docker.sh  lv_conf.h  partitions.csv  run_docker.sh  sdkconfig  sdkconfig.defaults
.devcontainer/: devcontainer.json
components/I2CDevice/: CMakeLists.txt
components/I2CDevice/inc/: I2CBus.h  I2CDevice.h  II2CBus.h  II2CDevice.h
components/I2CDevice/src/: I2CBus.cpp  I2CDevice.cpp
components/custom_fonts/: CMakeLists.txt  HowToCreateLvglFont.txt
components/custom_fonts/inc/: lv_font_custom_12.h
components/custom_fonts/src/: lv_font_custom_12.c
components/fonts/: CMakeLists.txt  HowToCutDownFontFile.txt
components/fonts/inc/: FontRenderer.h  example.h  font_rotate_task.h  font_test_task.h
components/fonts/src/: FontRenderer.cpp  example.cpp  font_rotate_task.cpp  font_test_task.cpp
components/lvgl/: CMakeLists.txt
components/lvgl_driver/: CMakeLists.txt
components/lvgl_driver/inc/: lvgl_display.h  lvgl_driver.h  lvgl_tasks.h
components/lvgl_driver/src/: lvgl_display.cpp  lvgl_driver.cpp  lvgl_tasks.cpp
components/max30102/: CMakeLists.txt
components/max30102/inc/: max30102.h  max30102_regs.h  max30102_task.h  spo2_hr.h
components/max30102/src/: max30102.cpp  max30102_task.cpp  spo2_hr.cpp
components/oled/: CMakeLists.txt
components/oled/inc/: display_geometry.h  ssd1306.h  ssd1306_commands.h
components/oled/src/: ssd1306.cpp
components/provision/: CMakeLists.txt
components/provision/inc/: provision.h
components/provision/src/: provision.cpp
components/ui/: CMakeLists.txt
components/ui/inc/: ui_api.h  ui_consumer_task.h  ui_queue.h
components/ui/src/: ui_api.cpp  ui_consumer_task.cpp  ui_queue.cpp
main/: CMakeLists.txt  Hooks.cpp  main.cpp
main/inc/: Hooks.h
main/src/: Hooks.cpp  main.cpp
